# cpp-hello-world

./: CMakeLists.txt
src/: main.cpp
